fix z-index

--- a/my-profile-app/src/App.css
+++ b/my-profile-app/src/App.css
@@ -22,6 +22,7 @@
 	justify-content: center;
 	position: fixed;
 	top:0;
+	z-index: 9;
 	
 }
 
