--- a/my-profile-app/src/Components/NavBtns/NavBtns.module.css
+++ b/my-profile-app/src/Components/NavBtns/NavBtns.module.css
@@ -12,7 +12,7 @@
  	font-weight: 600;
  	position: relative;
  	transition: all 0.5s;
- 	z-index: 1;
+ 	z-index: 10;
 }
 
 .btnNightMode::before {
@@ -52,7 +52,7 @@
  	font-weight: 700;
  	position: relative;
  	transition: all 0.5s;
- 	z-index: 1;
+ 	z-index: 10;
 }
 
 .btnDayMode::before {
